--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
-MYSQL_USER=admin
-MYSQL_DATABASE=test
-MYSQL_PASSWORD=password
-MYSQL_ROOT_PASSWORD=password
-SUITECRM_HTTP_PORT=40691
-APP_CODE_PATH_HOST=/tmp
+MYSQL_USER=bn_suitecrm
+MYSQL_DATABASE=bitnami_suitecrm
 DATA_PATH_HOST=/tmp
-MYSQL_PATH=./mysql
-MYSQL_PORT=43721
+SUITECRM_HTTP_PORT=40691
+SUITECRM_HTTP_PORT=40692
+APP_CODE_PATH_HOST=/tmp
