--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,28 @@
 version: "3"
 services:
+  mariadb:
+    image: 'docker.io/bitnami/mariadb:10.3-debian-10'
+    environment: 
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_USER=${MYSQL_USER}
+      - MARIADB_DATABASE=${MYSQL_DATABASE}
+    volumes: 
+      - '${DATA_PATH_HOST}:/bitnami/mariadb'
   suitecrm:
-    image: "docker.io/bitnami/suitecrm:7-debian-10"
+    image: 'docker.io/bitnami/suitecrm:7-debian-10'
     environment:
-      - "MARIADB_HOST=mysql"
-      - "MARIADB_PORT_NUMBER=3306"
-      - "SUITECRM_DATABASE_USER=${MYSQL_USER}"
-      - "SUITECRM_DATABASE_NAME=${MYSQL_DATABASE}"
-      - "SUITECRM_DATABASE_PASSWORD=${MYSQL_PASSWORD}"
-      - "ALLOW_EMPTY_PASSWORD=yes"
+      - 'MARIADB_HOST=mariadb'
+      - 'MARIADB_PORT_NUMBER=3306'
+      - 'SUITECRM_DATABASE_USER=${MYSQL_USER}'
+      - 'SUITECRM_DATABASE_NAME=${MYSQL_DATABASE}'
+      - 'ALLOW_EMPTY_PASSWORD=yes'
     ports:
-      - "${SUITECRM_HTTP_PORT}:80"
+      - '${SUITECRM_HTTP_PORT}:8080'
+      - '${SUITECRM_HTTPS_PORT}:8443'
     volumes:
-      - "${APP_CODE_PATH_HOST}:/bitnami"
+      - '${APP_CODE_PATH_HOST}:/bitnami/suitecrm'
     depends_on:
-      - "mysql"
-  mysql:
-    image: "deckapp/mysql:v10.1.19"
-    environment:
-      - "MYSQL_DATABASE=${MYSQL_DATABASE}"
-      - "MYSQL_USER=${MYSQL_USER}"
-      - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
-      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
-    volumes:
-      - "${DATA_PATH_HOST}/mysql:/var/lib/mysql"
-      - "${MYSQL_PATH}:/etc/mysql/"
-    ports:
-      - "${MYSQL_PORT}:3306"
+      - 'mariadb'
 volumes:
   mysql:
     driver: "${VOLUMES_DRIVER}"
