--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MYSQL_USER=bn_suitecrm
-MYSQL_DATABASE=bitnami_suitecrm
-DATA_PATH_HOST=/tmp
+DB_USER=bn_suitecrm
+DB_DATABASE=bitnami_suitecrm
+DATA_PATH_HOST=D:\repo\r
 SUITECRM_HTTP_PORT=40691
 SUITECRM_HTTPS_PORT=40692
-APP_CODE_PATH_HOST=/tmp
+APP_CODE_PATH_HOST=D:\repo\node
