--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment: 
       - ALLOW_EMPTY_PASSWORD=yes
       - MARIADB_USER=${DB_USER}
-      - MARIADB_DATABASE=${DB_DATABASE}
+      - MARIADB_DATABASE=${DB_NAME}
     volumes: 
       - '${DATA_PATH_HOST}:/bitnami/mariadb'
   suitecrm:
@@ -14,7 +14,7 @@ services:
       - 'MARIADB_HOST=mariadb'
       - 'MARIADB_PORT_NUMBER=3306'
       - 'SUITECRM_DATABASE_USER=${DB_USER}'
-      - 'SUITECRM_DATABASE_NAME=${DB_DATABASE}'
+      - 'SUITECRM_DATABASE_NAME=${DB_NAME}'
       - 'ALLOW_EMPTY_PASSWORD=yes'
     ports:
       - '${SUITECRM_HTTP_PORT}:8080'
