--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USER=bn_suitecrm
 DB_NAME=bitnami_suitecrm
-DATA_PATH_HOST=D:\repo\r
+DATA_PATH_HOST=\tmp\mysql
 SUITECRM_HTTP_PORT=40691
 SUITECRM_HTTPS_PORT=40692
-APP_CODE_PATH_HOST=D:\repo\node
+APP_CODE_PATH_HOST=\tmp
