--- a/.env
+++ b/.env
@@ -1,4 +1,18 @@
-DATA_PATH_HOST=\tmp\mysql
-SUITECRM_HTTP_PORT=40691
-SUITECRM_HTTPS_PORT=40692
-APP_CODE_PATH_HOST=\tmp
+SERVER_ROOT=/var/www/public
+APP_CODE_PATH_HOST=/Users/nabakr.das/Desktop/mautic/data
+APP_CODE_CONTAINER_FLAG=:cached
+APP_CODE_PATH_SUITE=/var/www
+SUITE_HOST_HTTP_PORT=5647
+DISPLAY_PHPERROR=true
+XDEBUG=true
+BACK_END=nginx
+DB_NAME=test
+DB_USER=admin
+DB_PASSWORD=password
+DB_ROOT_PASSWORD=password
+DATA_PATH_HOST=/Users/nabakr.das/Desktop/mautic/db1
+MYSQL_PORT=34321
+MARIADB_VERSION=10.7
+USER_ID=1000
+GROUP_ID=1000
+PMA_PORT=34324
