--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,37 @@
-    version: '3'
-    services:
-      mariadb:
-        build: './mariadb'
-        environment:
-          # ALLOW_EMPTY_PASSWORD is recommended only for development.
-          - ALLOW_EMPTY_PASSWORD=yes
-          - MARIADB_USER=bn_suitecrm
-          - MARIADB_DATABASE=bitnami_suitecrm
-        volumes:
-          - '${DATA_PATH_HOST}:/bitnami/mariadb'
-      suitecrm:
-        build: './suitecrm'
-        ports:
-          - '${SUITECRM_HTTP_PORT}:8080'
-          - '${SUITECRM_HTTPS_PORT}:8443'
-        environment:
-          - SUITECRM_DATABASE_HOST=mariadb
-          - SUITECRM_DATABASE_PORT_NUMBER=3306
-          - SUITECRM_DATABASE_USER=bn_suitecrm
-          - SUITECRM_DATABASE_NAME=bitnami_suitecrm
-          # ALLOW_EMPTY_PASSWORD is recommended only for development.
-          - ALLOW_EMPTY_PASSWORD=yes
-        volumes:
-          - '${APP_CODE_PATH_HOST}:/bitnami/suitecrm'
-        depends_on:
-          - mariadb
+version: '3'
+services:
+  suitecrm:
+    build:
+      context: 'suite'
+      args:
+        - 'BACK_END=${BACK_END}'
+        - 'USER_ID=${USER_ID}'
+        - 'GROUP_ID=${GROUP_ID}'
+        - 'PHP_VERSION=${PHP_VERSION}'
+        - 'DISPLAY_PHPERROR=${DISPLAY_PHPERROR}'
+        - 'XDEBUG=${XDEBUG}'
     volumes:
-      mariadb_data:
-        driver: local
-      suitecrm_data:
-        driver: local
+      - '${APP_CODE_PATH_HOST}:${APP_CODE_PATH_SUITE}${APP_CODE_CONTAINER_FLAG}'
+    ports:
+      - '${SUITE_HOST_HTTP_PORT}:80'
+  mariadb:
+    image: mariadb:${MARIADB_VERSION}
+    environment:
+      - 'MARIADB_DATABASE=${DB_NAME}'
+      - 'MARIADB_USER=${DB_USER}'
+      - 'MARIADB_PASSWORD=${DB_PASSWORD}'
+      - 'MARIADB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}'
+    volumes:
+      - '${DATA_PATH_HOST}:/var/lib/mysql'
+    ports:
+      - ${MYSQL_PORT}:3306
+  phpmyadmin:
+    image: phpmyadmin:latest
+    environment:
+      - 'PMA_ARBITRARY=1'
+      - 'MYSQL_USER=${DB_USER}'
+      - 'MYSQL_PASSWORD=${DB_PASSWORD}'
+      - 'MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}'
+    ports:
+      - '${PMA_PORT}:80'
+volumes: {}
