--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_CODE_PATH_SUITE=/var/www
 SUITE_HOST_HTTP_PORT=5647
 DISPLAY_PHPERROR=true
 XDEBUG=true
-BACK_END=nginx
+BACK_END=apache
 DB_NAME=test
 DB_USER=admin
 DB_PASSWORD=password
